# fastapi-toturial

./: .gitignore  README.md  book1.py  book2.py  main.py  pyproject.toml
TodoApp/: auth.py  database.py  main.py  models.py  test.py  todo.db
TodoApp/alembic/: env.py
TodoApp/company/: companyapi.py  dependencies.py
TodoApp/config/: database.py
TodoApp/models/: models.py
TodoApp/routers/: auth.py  todo.py  users.py
TodoApp/schemas/: todo.py  users.py
