[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["sangjinsu <climbplant39@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
