[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["sangjinsu <climbplant39@kakao.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.45"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pymysql = "^1.0.2"
alembic = "^1.9.0"
sqlacodegen = "^2.3.0"
flask-sqlacodegen = "^1.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
